--- a/views/home.erb
+++ b/views/home.erb
@@ -2,13 +2,13 @@
 	ZAP
 </h1>
 
-<form method="POST" action="/login">
+<form action="/login" method="POST">
 	<input type="text" name="username" placeholder="Alias" required>
 	<input type="password" name="password" placeholder="Password" required>
 	<input type="submit" value="ZAP IN!">
 </form>
 
-<form method="POST" action="/sign_up">
+<form action="/sign_up" method="POST">
 	<input type="text" name="[user]username" placeholder="Pick Your Alias" required>
 	<input type="password" name="[user]password" placeholder="Pick Your Password" required>
 	<input type="text" name="[user]email" placeholder="Enter Your Email" required>
