--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 	<head>
@@ -17,6 +16,8 @@
 	</head>
 
 	<body>
+		<%= yield %>
+		
 		<h1>
 
 		</h1>
@@ -24,6 +25,7 @@
 		<p>
 
 		</p>
+
 	</body>
-<html>
+</html>
 
