--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,9 +8,9 @@
 
 		<meta charset="UTF-8">
 
-		<link rel="stylesheet" type="text/css" href="">
+		<link rel="stylesheet" type="text/css" href="/styling.css">
 
-		<script type="text/javascript" src="jquery-2.1.3.js"></script>
+		<script type="text/javascript" src="/jquery-2.1.3.js"></script>
 		
 		<script type="text/javascript" src=""></script>
 
@@ -19,13 +19,7 @@
 	<body>
 
 		<%= yield %>
-		<h1>
 
-		</h1>
-
-		<p>
-
-		</p>
 	</body>
-<html>
+</html>
 
