--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,6 +7,8 @@
 
 		<meta charset="UTF-8">
 
+		<link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
+
 		<link rel="stylesheet" type="text/css" href="/styling.css">
 
 		<script type="text/javascript" src="/jquery-2.1.3.js"></script>
@@ -16,17 +18,12 @@
 	</head>
 
 	<body>
+		<div class="speech">
+			<img src="/images/spike3.png">
+		</div>
 
 		<%= yield %>
 	
-		<h1>
-
-		</h1>
-
-		<p>
-
-		</p>
-
 	</body>
 </html>
 
