--- a/views/feed.erb
+++ b/views/feed.erb
@@ -3,9 +3,15 @@
 </h1>
 
 <form action="/feed" method="POST">
-	<input type="text" name="[user]feed" maxlength="150"><br>
+	<input type="text" name="[post]post" maxlength="150"><br>
 	<input type="submit" value="ZAP it">
 </form>
+
+
+<% current_user.posts.each do |tweet| %>
+		<p><%= tweet.post %></p>
+<% end %>  
+		
 
 <form action="/logout" method="POST">
 	<input type="submit" value="Zap Out">
