--- a/views/account.erb
+++ b/views/account.erb
@@ -1,28 +1,52 @@
-<h1>
-	<%= "Welcome #{current_user.username}" %>
-</h1>
+<div class="accHead">
+	<h1>
+		<%= "Welcome #{current_user.username}" %>
+	</h1>
+</div>
 
-<h3>
-	Account Details
-</h3>
-
-<form action="/account" method="POST">
-	<input type="text" name="[user]fname" placeholder="First Name"><br>
-	<input type="text" name="[user]lname" placeholder="Last Name"><br>
-	<input type="text" name="[user]phone" placeholder="Phone Number"><br>
-	<input type="text" name="[user]city" placeholder="City"><br>
-	<input type="text" name="[user]gender" placeholder="Gender"><br>
-	<input type="text" name="[user]birthday" placeholder="Birthday ddmmyyyy"><br>
-	<input type="text" name="[user]website" placeholder="Website"><br>
-	<input type="text" name="[user]superhero" placeholder="Favorite Superhero or Villain"><br>
-	<input type="submit" value="Submit"><br>
-</form>
+<div class="account">
+	<h3>
+		Account Details
+	</h3>
 
 
-<form action="/account" method="POST">
-	<input type="submit" value="Delete?">
-</form>
+	<form action="/account" method="POST">
+		<div class="formLeft">
+			<input type="text" name="[user]fname" placeholder="First Name">
 
-<form action="/logout" method="POST">
-	<input type="submit" value="Zap Out">
-</form>
+			<br>
+			
+			<input type="text" name="[user]lname" placeholder="Last Name">
+
+			<br>
+			
+			<input type="text" name="[user]phone" placeholder="Phone Number">
+
+			<br>
+			
+			<input type="text" name="[user]city" placeholder="City">
+		</div>
+		
+		<div class="formRight">
+			<input type="text" name="[user]gender" placeholder="Gender">
+
+			<br>
+			
+			<input type="text" name="[user]birthday" placeholder="Birthday ddmmyyyy">
+
+			<br>
+			
+			<input type="text" name="[user]website" placeholder="Website">
+
+			<br>
+			
+			<input type="text" name="[user]superhero" placeholder="Favorite Superhero or Villain">
+		</div>
+		<input type="submit" value="Submit"><br>
+	</form>
+
+
+	<form action="/account" method="POST">
+		<input type="submit" value="Delete?">
+	</form>
+</div>
