--- a/views/home.erb
+++ b/views/home.erb
@@ -1,9 +1,8 @@
-
-<div class="head">	
-	<h1>
-		ZAP
-	</h1>
-</div>
+		<div class="head">	
+			<h1>
+				<%= @title %>
+			</h1>
+		</div>
 
 <div class="homeForms">
 	<div class="login">
