--- a/views/account.erb
+++ b/views/account.erb
@@ -38,11 +38,13 @@
 			
 			<input type="text" name="[user]superhero" placeholder="Favorite Superhero or Villain">
 		</div>
-		<input type="submit" value="Submit"><br>
+		
+		<input type="submit" value="Submit" class="accSubmit">
+		<br>
 	</form>
 
 
 	<form action="/account" method="POST">
-		<input type="submit" value="Delete?">
+		<input type="submit" value="Delete?" class="delAcc">
 	</form>
 </div>
