--- a/views/home.erb
+++ b/views/home.erb
@@ -4,6 +4,18 @@
 	</h1>
 </div>
 
+  <% if flash[:notice] %>
+    <div class="flash notice">
+      <%=flash[:notice] %>
+    </div>
+  <% end %>
+  <% if flash[:alert] %>
+    <div class="flash alert">
+      <%=flash[:alert] %>
+    </div>
+  <% end %>
+
+
 <div class="homeForms">
 	<div class="login">
 		<div class="zapHead">
