Style feed.erb, fix functionality of home.erb and layout.

--- a/views/feed.erb
+++ b/views/feed.erb
@@ -1,21 +1,20 @@
-<div class="feedHead">
-	<h1>
-		<%= "Welcome #{current_user.username}" %>
-	</h1>
+<div class="feedForm">
+	<form action="/feed" method="POST">
+		<div class="feedPost">
+			<textarea name="[post]post" maxlength="150" placeholder="Write your post here"></textarea>
+		</div>
+		
+		<div class="feedSub">
+			<input type="submit" value="ZAP IT!">
+		</div>
+	</form>
 </div>
 
-<form action="/feed" method="POST">
-	<input type="text" name="[post]post" maxlength="150">
-	
-	<br>
-	
-	<input type="submit" value="ZAP it">
-</form>
 
-<% if current_user.posts.all != nil %>
+ <% if !current_user %>
 	<% current_user.posts.each do |tweet| %>
 			<p>
 				<%= tweet.post %>
 			</p>
 	<% end %> 
-<% end %> 
+<% end %>
