--- a/public/styling.css
+++ b/public/styling.css
@@ -23,8 +23,8 @@ body {
 
 .weird {
 	width: 1340px;
-	margin: 0 auto 140px auto;
-	height: 408px;
+	margin: 0 auto 210px auto;
+	height: 410px;
 }
 
 .navBar {
@@ -340,7 +340,7 @@ input.submit {
 	font-family: 'Bangers', cursive;
 	font-size: 4em;
 	background-color: #FFFFFF;
-	color: #DB0001;
+	color: #000000;
 	margin: 0 2px 36px 2px;
 	padding: 6px 397px;
 	background-color: #DB0001;
@@ -362,11 +362,46 @@ input.submit {
 /* Feed >>>>>>>>>>>>>>>>>>>>>>> Start */
 
 .feedForm {
-
+	width: 960px;
+	margin: 10px auto;
+	border: 2px solid black;
+	background-color: #FFFFFF;
+	height: 58px;
+	box-shadow: 0px 8px 28px 0px #000000;
 }
 
-.logout {
+.feedPost {
+	width: 500px;
+	margin: 2px;
+	border: 2px solid black;
+	float: left;
+	background-color: #FFFFFF;
+	height: 50px;
+}
 
+.feedPost textarea {
+	width: 490px;
+	margin: 2px;
+	resize: none;
+	height: 39px;
+}
+
+.feedSub {
+	width: 450px;
+	float: left;
+	margin: 2px 2px 2px 0;
+}
+
+.feedSub input[type="submit"] {
+	width: 450px;
+	height: 54px;
+	margin: 0 2px 0 0;
+	border: 2px solid black;
+	background-color: #DB0001;
+	font-family: 'Bangers', cursive;
+	font-size: 3em;
+	padding: 2px;
+	color: #EDEF34;
 }
 /* Feed >>>>>>>>>>>>>>>>>>>>>>>>> End */
 
