--- a/views/account.erb
+++ b/views/account.erb
@@ -7,7 +7,7 @@
 </h3>
 
 <form action="/account" method="POST">
-	<input type="text" name="[user]fname" placeholder="First Name"><br>
+	<input type="text" name="[user]fname" value=current_user.fname placeholder="First Name"><br>
 	<input type="text" name="[user]lname" placeholder="Last Name"><br>
 	<input type="text" name="[user]phone" placeholder="Phone Number"><br>
 	<input type="text" name="[user]city" placeholder="City"><br>
