fixed phone number on account

--- a/views/account.erb
+++ b/views/account.erb
@@ -18,7 +18,7 @@
 
 			<br>
 			
-			<input type="text" name="[user]pnumber" placeholder="Phone Number" value= <%= current_user.pnumber %>>
+			<input type="text" name="[user]pnumber" placeholder="Phone e.g. 555-555-5555" value= <%= current_user.pnumber %>>
 
 			<br>
 			
