--- a/views/account.erb
+++ b/views/account.erb
@@ -1,7 +1,3 @@
-<h3>
-	Account Details
-</h3>
-
 <div class="account">
 	<h3>
 		Account Details
@@ -45,7 +41,7 @@
 		<br>
 	</form>
 
-	<form action="/account" method="POST">
-		<input type="submit" value="Delete?" class="delAcc">
+	<form action="/delete" method="POST">
+		<input type="submit" value="Delete" class="delAcc">
 	</form>
 </div> 
