--- a/views/home.erb
+++ b/views/home.erb
@@ -15,6 +15,7 @@
     </div>
   <% end %>
 
+<!-- <img src="/images/batman.png" class="bats"> -->
 
 <div class="homeForms">
 	<div class="login">
@@ -53,7 +54,7 @@
 
 					<br>
 
-					<input type="text" name="[user]email" placeholder="Enter Your Email" required>
+					<input type="email" name="[user]email" placeholder="Enter Your Email" required>
 
 					<br>
 
@@ -68,3 +69,5 @@
 		</div>
 	</div>
 </div>
+
+<!-- <img src="/images/doom.png" class="doom"> -->
