--- a/views/account.erb
+++ b/views/account.erb
@@ -1,12 +1,7 @@
-<h3>
-	Account Details
-</h3>
-
 <div class="account">
 	<h3>
 		Account Details
 	</h3>
-
 
 	<form action="/account" method="POST">
 		<div class="formLeft">
@@ -45,7 +40,7 @@
 		<br>
 	</form>
 
-	<form action="/account" method="POST">
+	<form action="/delete" method="POST">
 		<input type="submit" value="Delete?" class="delAcc">
 	</form>
 </div> 
