--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,7 +9,7 @@
 
 		<link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
 
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="/css/styling.css">
 
 		<script type="text/javascript" src="/jquery-2.1.3.js"></script>
 		
