--- a/views/feed.erb
+++ b/views/feed.erb
@@ -13,7 +13,7 @@
 <% if current_user %>
 	<div class="posts">
 		<!-- create div styled like thought bubble, for each one it will create one -->
-		<% current_user.posts.reverse_each do |tweet| %>
+		<% @posts.reverse_each do |tweet| -1..-10 %>
 			<div class="singleThought">
 				<p class="thought">
 					<%= tweet.post %>
